src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


body {
  font-family: Arial, Helvetica, sans-serif;
  overflow: hidden;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer components {
  a {
    position: relative;
    text-decoration: none;
    white-space: pre;
  }

  a::before {
    content: "  ";
  }

  a::after {
    content: "  ";
  }
  
  a:hover::before {
    content: "> ";
  }
  
  a:hover::after {
    content: " <";
  }
}

::-webkit-scrollbar {
  width: 5px;
  cursor: pointer;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px var(--color);
}

::-webkit-scrollbar-thumb {
  background-color: var(--color);
  outline: 5px solid var(--color);
}

